--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
-      - run: npx cypress install
+#      - run: npx cypress install
       - uses: nrwl/nx-set-shas@v4
 
       # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
@@ -39,4 +39,4 @@ jobs:
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       # When you enable task distribution, run the e2e-ci task instead of e2e
 #      - run: npx nx affected -t lint test build e2e
-      - run: 'npx nx-cloud start-ci-run --distribute-on="8 linux-medium-js"'
+      - run: 'npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js"'
